--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 body {
     background: #b3dbe8;
     color: #000;
-    font-family: sans-serif; /*   add fonts here   */
+    font-family: "Josefin Slab", Times, serif; /*   add fonts here   */
     font-size: 100%; /* DO NOT change */
     margin: 0; /* DO NOT change */
 }
@@ -48,7 +48,7 @@ aside {
 
 h1, h2 {
     margin: 0;
-    font-family: serif;  /*   add fonts here   */
+    font-family: "Fjalla One", Arial, sans-serif;  /*   add fonts here   */
 }
 
 article h1 {
@@ -111,3 +111,23 @@ aside a:focus, aside a:hover {
 }
 
 /* media queries */
+
+@media (max-width: 380px) {
+
+	
+	article { width: 380px;}
+	
+	aside {margin: 0;
+			width: 380px;
+			clear: both; }
+			
+	#sidebar2 { margin: 0;
+	}
+	
+	#top-image-container {
+		display: none;
+	}
+	
+	#container { margin: 0;}
+
+}
